--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,15 @@
 
 :root{
   --dark:rgb(43, 71, 100);
+  --pink: rgb(240, 216, 235);
+  --shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 body{
-  background-color: rgb(219, 200, 200)
+  background-color: rgb(228, 190, 228)
+}
+
+nav{
+  background-color:var(--pink) ;
 }
 
 h2{
@@ -40,9 +46,19 @@ header img{
 }
 
 #contact-me{
-  background-color: rgb(228, 182, 219);
+  background-color: var(--pink);
 }
 #contact-me img{
   width: 50px;
   margin-right: 20px;
+}
+
+.btn:hover {
+  transform: scale(1.19);
+  box-shadow: var(--shadow);
+}
+
+.card:hover {
+  transform: scale(1.04);
+ -webkit-filter: var(--shadow)
 }
